@@ -20,6 +20,7 @@ import static org.apache.solr.common.params.CommonParams.JSON;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.params.CommonParams;
 import org.apache.solr.common.util.NamedList;
@@ -159,6 +160,6 @@ public abstract class BaseSolrResource {
 
   /** Decode URL-encoded strings as UTF-8, and avoid converting "+" to space */
   protected static String urlDecode(String str) throws UnsupportedEncodingException {
-    return URLDecoder.decode(str.replace("+", "%2B"), "UTF-8");
+    return URLDecoder.decode(str.replace("+", "%2B"), StandardCharsets.UTF_8);
   }
 }
